Add DBADashAgent table
Added DBADashAgent table.  Collect service name and path.  Collect agent used to import in addition to the collection agent.
Fix column type internal performance counters, version bump

--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -287,6 +287,7 @@
     <Compile Include="AWSTools.cs" />
     <Compile Include="CollectionConfig.cs" />
     <Compile Include="CollectionConfigSchedule.cs" />
+    <Compile Include="DBADashAgent.cs" />
     <Compile Include="DBConnection.cs">
       <SubType>Form</SubType>
     </Compile>
