Collect Memory Usage
Add MemoryUsage collection (sys.dm_os_memory_clerks).  Add GUI tab for Memory - showing memory clerks and memory performance counters.

--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -360,6 +360,7 @@
     <Content Include="SQL\SQLJobHistory.sql" />
     <Content Include="SQL\SQLLastGoodCheckDB.sql" />
     <Content Include="SQL\SQLLogRestores.sql" />
+    <Content Include="SQL\SQLMemoryUsage.sql" />
     <Content Include="SQL\SQLObjectExecutionStats.sql" />
     <Content Include="SQL\SQLOSInfo.sql" />
     <Content Include="SQL\SQLOSLoadedModules.sql" />
