Schedule Configuration & Service Config tool improvements. Allow easy configuration of collection schedules. Improve service config tool to make it easier to add a large number of instances.

--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -283,7 +283,7 @@
   <ItemGroup>
     <Compile Include="AWSTools.cs" />
     <Compile Include="CollectionConfig.cs" />
-    <Compile Include="CollectionConfigSchedule.cs" />
+    <Compile Include="CollectionSchedule.cs" />
     <Compile Include="DBADashAgent.cs" />
     <Compile Include="DBConnection.cs">
       <SubType>Form</SubType>
