--- a/DBADashServiceConfig/packages.config
+++ b/DBADashServiceConfig/packages.config
@@ -6,6 +6,56 @@
   <package id="Azure.Identity" version="1.4.1" targetFramework="net472" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="CronExpressionDescriptor" version="2.16.0" targetFramework="net472" />
+  <package id="Humanizer" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.af" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ar" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.az" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.bg" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.bn-BD" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.cs" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.da" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.de" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.el" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.es" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.fa" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.fi-FI" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.fr" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.fr-BE" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.he" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.hr" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.hu" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.hy" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.id" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.it" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ja" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ko-KR" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ku" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.lv" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ms-MY" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.mt" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.nb" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.nb-NO" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.nl" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.pl" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.pt" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ro" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.ru" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.sk" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.sl" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.sr" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.sr-Latn" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.sv" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.th-TH" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.tr" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.uk" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.uz-Cyrl-UZ" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.uz-Latn-UZ" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.vi" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.zh-CN" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.zh-Hans" version="2.11.10" targetFramework="net472" />
+  <package id="Humanizer.Core.zh-Hant" version="2.11.10" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="3.0.1" targetFramework="net472" />
