--- a/DBADashServiceConfig/ServiceConfigTool.csproj
+++ b/DBADashServiceConfig/ServiceConfigTool.csproj
@@ -281,6 +281,17 @@
     <Compile Include="DBDeploy.Designer.cs">
       <DependentUpon>DBDeploy.cs</DependentUpon>
     </Compile>
+    <Compile Include="InstallService.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InstallService.Designer.cs">
+      <DependentUpon>InstallService.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="S3Browser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -304,6 +315,10 @@
     <EmbeddedResource Include="DBDeploy.resx">
       <DependentUpon>DBDeploy.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="InstallService.resx">
+      <DependentUpon>InstallService.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="S3Browser.resx">
       <DependentUpon>S3Browser.cs</DependentUpon>
     </EmbeddedResource>
@@ -315,14 +330,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="app.manifest" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -345,6 +355,10 @@
     <None Include="Resources\Arch_Amazon-Simple-Storage-Service_16.png" />
     <None Include="Resources\Information_blue_6227_16x16_cyan.png" />
     <None Include="Resources\Warning_yellow_7231_16x16.png" />
+    <None Include="Resources\Stop_16x.png" />
+    <None Include="Resources\install.bmp" />
+    <None Include="Resources\112_RefreshArrow_Green_16x16_72.png" />
+    <None Include="Resources\StartWithoutDebug_16x.png" />
     <Content Include="services.ico" />
   </ItemGroup>
   <ItemGroup>
