Azure MI Support
Fixed issue where updating files in SQL folder wouldn't change the query ran.  Added SqlStrings class to help with this.
There are a number of places where we check if instance is AzureDB by looking at EditionID.  EditionID 1674378470  is used by both Azure DB and Azure MI - in many cases we want to treat Azure MI more as a 'normal' instance.  Changed to check EngineEdition.
Added version/engineedition check
Validation check will throw an error if version or engine edition isn't known/supported.  Note: Validation can be skipped to test DBA Dash on new SQL Versions.
Add icon for Azure MI for tree.
Fix issue with drive space reporting on Azure MI.

--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <OutputType>Library</OutputType>
@@ -20,56 +20,56 @@
     <Content Include="PerformanceCounters.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="SQL\SQLAzureDBResourceGovernance.sql" />
-    <Content Include="SQL\SQLAgentJobs.sql" />
-    <Content Include="SQL\SQLAlerts.sql" />
-    <Content Include="SQL\SQLAvailabilityGroups.sql" />
-    <Content Include="SQL\SQLAvailabilityReplicas.sql" />
-    <Content Include="SQL\SQLAzureDBElasticPoolResourceStats.sql" />
-    <Content Include="SQL\SQLAzureDBResourceStats.sql" />
-    <Content Include="SQL\SQLAzureDBServiceObjectives.sql" />
-    <Content Include="SQL\SQLBackups.sql" />
-    <Content Include="SQL\SQLBlockingSnapshot.sql" />
-    <Content Include="SQL\SQLCorruption.sql" />
-    <Content Include="SQL\SQLCPU.sql" />
-    <Content Include="SQL\SQLCustomChecks.sql" />
-    <Content Include="SQL\SQLDatabaseMirroring.sql" />
-    <Content Include="SQL\SQLDatabasePermissions.sql" />
-    <Content Include="SQL\SQLDatabasePrincipals.sql" />
-    <Content Include="SQL\SQLDatabaseQueryStoreOptions.sql" />
-    <Content Include="SQL\SQLDatabaseRoleMembers.sql" />
-    <Content Include="SQL\SQLDatabases.sql" />
-    <Content Include="SQL\SQLDatabasesHADR.sql" />
-    <Content Include="SQL\SQLDBConfig.sql" />
-    <Content Include="SQL\SQLDBFiles.sql" />
-    <Content Include="SQL\SQLDBTuningOptions.sql" />
-    <Content Include="SQL\SQLDrives.sql" />
-    <Content Include="SQL\SQLInstance.sql" />
-    <Content Include="SQL\SQLIOStats.sql" />
-    <Content Include="SQL\SQLJobHistory.sql" />
-    <Content Include="SQL\SQLLastGoodCheckDB.sql" />
-    <Content Include="SQL\SQLLogRestores.sql" />
-    <Content Include="SQL\SQLMemoryUsage.sql" />
-    <Content Include="SQL\SQLObjectExecutionStats.sql" />
-    <Content Include="SQL\SQLOSInfo.sql" />
-    <Content Include="SQL\SQLOSLoadedModules.sql" />
-    <Content Include="SQL\SQLPerformanceCounters.sql" />
-    <Content Include="SQL\SQLRemoveEventSessions.sql" />
-    <Content Include="SQL\SQLRemoveEventSessionsAzure.sql" />
-    <Content Include="SQL\SQLRunningQueries.sql" />
-    <Content Include="SQL\SQLServerExtraProperties.sql" />
-    <Content Include="SQL\SQLServerPermissions.sql" />
-    <Content Include="SQL\SQLServerPrincipals.sql" />
-    <Content Include="SQL\SQLServerProperties.sql" />
-    <Content Include="SQL\SQLServerRoleMembers.sql" />
-    <Content Include="SQL\SQLSlowQueries.sql" />
-    <Content Include="SQL\SQLSlowQueriesAzure.sql" />
-    <Content Include="SQL\SQLStopEventSessions.sql" />
-    <Content Include="SQL\SQLStopEventSessionsAzure.sql" />
-    <Content Include="SQL\SQLSysConfig.sql" />
-    <Content Include="SQL\SQLTraceFlags.sql" />
-    <Content Include="SQL\SQLVLF.sql" />
-    <Content Include="SQL\SQLWaits.sql" />
+    <EmbeddedResource Include="SQL\SQLAvailabilityReplicas.sql" />
+	<EmbeddedResource Include="SQL\SQLAzureDBResourceGovernance.sql" />
+	<EmbeddedResource Include="SQL\SQLAgentJobs.sql" />
+	<EmbeddedResource Include="SQL\SQLAlerts.sql" />
+	<EmbeddedResource Include="SQL\SQLAvailabilityGroups.sql" />
+	<EmbeddedResource Include="SQL\SQLAzureDBElasticPoolResourceStats.sql" />
+	<EmbeddedResource Include="SQL\SQLAzureDBResourceStats.sql" />
+	<EmbeddedResource Include="SQL\SQLAzureDBServiceObjectives.sql" />
+	<EmbeddedResource Include="SQL\SQLBackups.sql" />
+	<EmbeddedResource Include="SQL\SQLBlockingSnapshot.sql" />
+	<EmbeddedResource Include="SQL\SQLCorruption.sql" />
+	<EmbeddedResource Include="SQL\SQLCPU.sql" />
+	<EmbeddedResource Include="SQL\SQLCustomChecks.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabaseMirroring.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabasePermissions.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabasePrincipals.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabaseQueryStoreOptions.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabaseRoleMembers.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabases.sql" />
+	<EmbeddedResource Include="SQL\SQLDatabasesHADR.sql" />
+	<EmbeddedResource Include="SQL\SQLDBConfig.sql" />
+	<EmbeddedResource Include="SQL\SQLDBFiles.sql" />
+	<EmbeddedResource Include="SQL\SQLDBTuningOptions.sql" />
+	<EmbeddedResource Include="SQL\SQLDrives.sql" />
+	<EmbeddedResource Include="SQL\SQLInstance.sql" />
+	<EmbeddedResource Include="SQL\SQLIOStats.sql" />
+	<EmbeddedResource Include="SQL\SQLJobHistory.sql" />
+	<EmbeddedResource Include="SQL\SQLLastGoodCheckDB.sql" />
+	<EmbeddedResource Include="SQL\SQLLogRestores.sql" />
+	<EmbeddedResource Include="SQL\SQLMemoryUsage.sql" />
+	<EmbeddedResource Include="SQL\SQLObjectExecutionStats.sql" />
+	<EmbeddedResource Include="SQL\SQLOSInfo.sql" />
+	<EmbeddedResource Include="SQL\SQLOSLoadedModules.sql" />
+	<EmbeddedResource Include="SQL\SQLPerformanceCounters.sql" />
+	<EmbeddedResource Include="SQL\SQLRemoveEventSessions.sql" />
+	<EmbeddedResource Include="SQL\SQLRemoveEventSessionsAzure.sql" />
+	<EmbeddedResource Include="SQL\SQLRunningQueries.sql" />
+	<EmbeddedResource Include="SQL\SQLServerExtraProperties.sql" />
+	<EmbeddedResource Include="SQL\SQLServerPermissions.sql" />
+	<EmbeddedResource Include="SQL\SQLServerPrincipals.sql" />
+	<EmbeddedResource Include="SQL\SQLServerProperties.sql" />
+	<EmbeddedResource Include="SQL\SQLServerRoleMembers.sql" />
+	<EmbeddedResource Include="SQL\SQLSlowQueries.sql" />
+	<EmbeddedResource Include="SQL\SQLSlowQueriesAzure.sql" />
+	<EmbeddedResource Include="SQL\SQLStopEventSessions.sql" />
+	<EmbeddedResource Include="SQL\SQLStopEventSessionsAzure.sql" />
+	<EmbeddedResource Include="SQL\SQLSysConfig.sql" />
+	<EmbeddedResource Include="SQL\SQLTraceFlags.sql" />
+	<EmbeddedResource Include="SQL\SQLVLF.sql" />
+	<EmbeddedResource Include="SQL\SQLWaits.sql" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.3.33" />
