--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -75,6 +75,11 @@
 	<EmbeddedResource Include="SQL\SQLWaits.sql" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\LICENSE" Link="LICENSE">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.5.12" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.7.10" />
     <PackageReference Include="Azure.Core" Version="1.21.0" />
