Add CLI configuration to exclude DB project from build
Adding a configuration that excludes the DB project from the build. DB project currently can't be built without passing a NETCoreTargetsPath with donet build.

--- a/DBADash.Test/DBADash.Test.csproj
+++ b/DBADash.Test/DBADash.Test.csproj
@@ -7,6 +7,8 @@
     <IsPackable>false</IsPackable>
 
     <StartupObject></StartupObject>
+
+    <Configurations>Debug;Release;CLI</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,7 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DBADashConfig\DBADashConfig.csproj" />
-    <ProjectReference Include="..\DBADashDB\DBADashDB.sqlproj" />
   </ItemGroup>
 
 </Project>
