--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -7,6 +7,7 @@
     <Deterministic>false</Deterministic>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>false</UseWindowsForms>
+    <Configurations>Debug;Release;CLI</Configurations>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
