--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,30 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    name: Build
+    runs-on: windows-latest
 
-  placeholder:
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [csharp]
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: placeholder
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+          include-prerelease: true
+
+      - name: Build
+        run: dotnet build -c CLI
+
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.1
+
+      - name: Build DB
+        run: msbuild dbadashdb -property:Configuration=CLI
