--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -101,6 +101,7 @@
     <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" Version="160.22504.0" />
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="161.46521.71" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="SerilogTimings" Version="2.3.0" />
